// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call updateChipList when suggestion is clicked 1`] = `
<div>
  <div
    class="chip-list-input  mko_vagvjv-chipListInput"
  >
    <div
      class="autocomplete  mko_ydt0iq-autocomplete"
    >
      <div
        class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
      >
        <div
          class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
        >
          <input
            autocomplete="off"
            class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable chip-list-input__clearable-input  mko_vagvjv-clearButton"
            id="jest"
            name="text"
            placeholder=" "
            type="text"
            value=""
          />
          <label
            for="jest"
          >
            jest test
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should ready removal of selected chip 1`] = `
<div>
  <div
    class="chip-list-input chip-list-input--focused  mko_vagvjv-chipListInput"
  >
    <div
      class="chip-list  mko_vagvjv-chipList"
    >
      <div
        class="chip-list__inner  mko_vagvjv-chipList__inner"
      >
        <span
          class="tag-chip tag-chip--deletable  mko_xm6hi0-tagChip  mko_xm6hi0-tagChip_deletable"
        >
          <span
            class="tag-chip__text  mko_xm6hi0-tagChip__text"
          >
            Bat
          </span>
          <button
            aria-label="Remove tag"
            class="button ripple button--icon button--small  mko_c5ujei-button  mko_c5ujei-button_icon  mko_c5ujei-button_small tag-chip__delete  mko_xm6hi0-tagChip__delete"
            icon="❌︎"
            title="remove"
            type="button"
          />
        </span>
      </div>
    </div>
    <div
      class="autocomplete  mko_ydt0iq-autocomplete"
    >
      <div
        class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
      >
        <div
          class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
        >
          <input
            autocomplete="off"
            class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable chip-list-input__clearable-input  mko_vagvjv-clearButton"
            id="jest"
            name="text"
            placeholder=" "
            type="text"
            value=""
          />
          <label
            for="jest"
          >
            tags
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render selected chips and remove 1`] = `
<div>
  <div
    class="chip-list-input  mko_vagvjv-chipListInput"
  >
    <div
      class="chip-list  mko_vagvjv-chipList"
    >
      <div
        class="chip-list__inner  mko_vagvjv-chipList__inner"
      >
        <span
          class="tag-chip tag-chip--deletable  mko_xm6hi0-tagChip  mko_xm6hi0-tagChip_deletable"
        >
          <span
            class="tag-chip__text  mko_xm6hi0-tagChip__text"
          >
            Bat
          </span>
          <button
            aria-label="Remove tag"
            class="button ripple button--icon button--small  mko_c5ujei-button  mko_c5ujei-button_icon  mko_c5ujei-button_small tag-chip__delete  mko_xm6hi0-tagChip__delete"
            icon="❌︎"
            title="remove"
            type="button"
          />
        </span>
      </div>
    </div>
    <div
      class="autocomplete  mko_ydt0iq-autocomplete"
    >
      <div
        class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
      >
        <div
          class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
        >
          <input
            autocomplete="off"
            class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable chip-list-input__clearable-input  mko_vagvjv-clearButton"
            id="jest"
            name="text"
            placeholder=" "
            type="text"
            value=""
          />
          <label
            for="jest"
          >
            tags
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render selected chips and remove 2`] = `
<div>
  <div
    class="chip-list-input  mko_vagvjv-chipListInput"
  >
    <div
      class="chip-list  mko_vagvjv-chipList"
    >
      <div
        class="chip-list__inner  mko_vagvjv-chipList__inner"
      >
        <span
          class="tag-chip tag-chip--deletable  mko_xm6hi0-tagChip  mko_xm6hi0-tagChip_deletable"
        >
          <span
            class="tag-chip__text  mko_xm6hi0-tagChip__text"
          >
            Bat
          </span>
          <button
            aria-label="Remove tag"
            class="button ripple button--icon button--small  mko_c5ujei-button  mko_c5ujei-button_icon  mko_c5ujei-button_small tag-chip__delete  mko_xm6hi0-tagChip__delete"
            icon="❌︎"
            title="remove"
            type="button"
          />
        </span>
      </div>
    </div>
    <div
      class="autocomplete  mko_ydt0iq-autocomplete"
    >
      <div
        class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
      >
        <div
          class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
        >
          <input
            autocomplete="off"
            class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable chip-list-input__clearable-input  mko_vagvjv-clearButton"
            id="jest"
            name="text"
            placeholder=" "
            type="text"
            value=""
          />
          <label
            for="jest"
          >
            tags
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="chip-list-input  mko_vagvjv-chipListInput"
  >
    <div
      class="autocomplete  mko_ydt0iq-autocomplete"
    >
      <div
        class="clearable-input has-float-label  mko_18z22vm-clearableInput  mko_1aosyyv-controlContainer"
      >
        <div
          class="clearable-input__inner  mko_18z22vm-clearableInput__inner"
        >
          <input
            autocomplete="off"
            class="input clearable-input__input  mko_18z22vm-clearableInput__input  mko_18z22vm-clearableInput__input_clearable chip-list-input__clearable-input  mko_vagvjv-clearButton"
            id="jest"
            name="text"
            placeholder=" "
            type="text"
            value=""
          />
          <label
            for="jest"
          >
            tags
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
